# flutter_camera_detection

./: README.md  pubspec.yaml
android/: .gitignore  CMakeLists.txt  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/vn/camera/detection/plugin/camera_detection/: CameraDetectionPlugin.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/vn/camera/detection/plugin/camera_detection_example/: MainActivity.kt
example/android/app/src/profile/: AndroidManifest.xml
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/test/: widget_test.dart
ios/: .gitignore  camera_detection.podspec
ios/Classes/: CameraDetectionPlugin.h  CameraDetectionPlugin.m  SwiftCameraDetectionPlugin.swift  camera_detection.cpp
lib/: camera_detection.dart
lib/src/bindings/: c_ffi_binding_type.dart  dart_ffi_binding_type.dart  ffi_binding.dart
lib/src/detectors/: base_detector.dart  blurry_detector.dart  brightness_detector.dart  face_detector.dart
lib/src/models/: camera_blurry_options.dart  camera_brightness_options.dart  camera_effect_detection_options.dart  camera_face_detection_options.dart  camera_image_buffer.dart
lib/src/values/: constants.dart  enums.dart  typedefs.dart
lib/src/widgets/: camera_detection_box.dart  camera_preview_box.dart
